					general.reporting.alerts.toPlayer.allowedToReportPlayerAgain - If the player should be alerted when they are allowed to report another player after reaching their reporting limit.
				Changes:
					Removed Permissions plugin support.
					Configuration:
						general.reporting.alerts.limitReached moved to general.reporting.alerts.toConsole.limitReached
						general.reporting.alerts.allowedToReportAgain moved to general.reporting.alerts.toConsole.allowedToReportAgain
	3.1.1	1/8/2014
				Changes:
					Plugin update checking now works with the ServerMods API.
				New Configuration Option:
					plugin.updates.api-key - The api-key to send with the plugin update request.
	3.1.2	1/17/2014
				Fixed a ClassCastException when reporting with the console.
	3.1.3	4/13/2014
				Fixed the delete command not working when trying to delete the last viewed report.
				Fixed OPs and console not being able to alter or delete a report if the claiming player had a mod level above theirs.
	3.1.4	5/23/2014
				Fixes:
					Fixed a message saying the claiming player unassigned their self, when another player moved a report to a higher priority.
					Fixed the claimed and completion statuses, when using SQLite, incorrectly stating the report is unclaimed or unfinished.
	3.1.4.1	5/31/2014
				Added support for a release level version, ex. '3.1.4 BETA 2'.
	3.1.5
				Changes:
					Changed to use UUID player look-up and verification, whenever possible.
					Database:
						Added a 'SenderUUID' column.
						Added a 'ReportedUUID' column.
						Added a 'ClaimedByUUID' column.
						Added a 'CompletedByUUID' column.
						Removed the 'SenderRaw' column.
						Removed the 'ReportedRaw' column.
						Removed the 'ClaimedByRaw' column.
						Removed the 'CompletedByRaw' column.
						Changed the 'Sender' column to 16 characters.
						Changed the 'Reported' column to 16 characters.
						Changed the 'ClaimedBy' column to 16 characters.
						Changed the 'CompletedBy' column to 16 characters.